--- a/Pytorch_ML_zoomcamp_08_image_classification.ipynb
+++ b/Pytorch_ML_zoomcamp_08_image_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMkrg+8zSX9boIXEVXbljHd",
+      "authorship_tag": "ABX9TyNER9yONi4RbhC/3oUrRsYU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Quick test for Github connection"
+      ],
+      "metadata": {
+        "id": "96IiyA6OxMBZ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Original notebook is here -\n",
@@ -55,7 +64,7 @@
         },
         "outputId": "d24d5a53-0ba8-403d-873e-2e6d58bfc1d0"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -125,7 +134,7 @@
       "metadata": {
         "id": "6RPrGf3LJItN"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -136,7 +145,7 @@
       "metadata": {
         "id": "0Z3gZ390MoKv"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -153,7 +162,7 @@
         "id": "ylu2jfDnNVKI",
         "outputId": "a33e4be2-8947-4885-9a88-791e6805f5b2"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -183,7 +192,7 @@
         "id": "4SzmFF3ZNkRD",
         "outputId": "1d7d59d6-dbf9-4beb-c15d-c03c77b34dee"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -215,7 +224,7 @@
         "id": "0TDDD0NcOGoN",
         "outputId": "e7602294-a557-4350-b926-5d405b195a6b"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -363,7 +372,7 @@
         "id": "YIZ1GA4lOyCE",
         "outputId": "6986f144-24a6-4d3f-e996-11aa47370a79"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -400,7 +409,7 @@
       "metadata": {
         "id": "4Z4TVBZXUOz8"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -422,7 +431,7 @@
       "metadata": {
         "id": "Glzp92m09z-f"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -451,7 +460,7 @@
         "id": "KDtSWgWr-Yuu",
         "outputId": "99a28bc1-3b34-4744-de14-ac3387737c3e"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -498,7 +507,7 @@
         "id": "ClvTaRs2-s8g",
         "outputId": "3990fc67-b503-42b1-eca6-0a516607973a"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -536,7 +545,7 @@
         "id": "O4uf3ilq-23h",
         "outputId": "b3e899c1-bfce-4956-9ab0-c20ee1cd5fa5"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -563,7 +572,7 @@
         "id": "aCGS37LBBHUq",
         "outputId": "c7141b82-7567-4213-a497-3e238f3c26f2"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -645,7 +654,7 @@
       "metadata": {
         "id": "RNwGpvXfFR4O"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -678,7 +687,7 @@
       "metadata": {
         "id": "ZEoAMTnlNL4K"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -704,7 +713,7 @@
       "metadata": {
         "id": "W1uPibYOUs6A"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -744,7 +753,7 @@
       "metadata": {
         "id": "RI325ZdjV2uk"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -766,7 +775,7 @@
       "metadata": {
         "id": "T0mdKEmLZG8t"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -848,7 +857,7 @@
       "metadata": {
         "id": "12fKRMQzZtUa"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -859,7 +868,7 @@
       "metadata": {
         "id": "cFyAgMMAZudn"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -942,7 +951,7 @@
       "metadata": {
         "id": "prarctPSbG8k"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1004,7 +1013,7 @@
       "metadata": {
         "id": "smo7AEOMIBCm"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1099,7 +1108,7 @@
       "metadata": {
         "id": "R935bNI3JuYc"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1144,7 +1153,7 @@
       "metadata": {
         "id": "XCLGX_03PNeI"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1186,7 +1195,7 @@
       "metadata": {
         "id": "j9dgiGIUQTJx"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1197,7 +1206,7 @@
       "metadata": {
         "id": "lt-gsRVGDPAb"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1268,7 +1277,7 @@
       "metadata": {
         "id": "YfrMHc1bRY2-"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1293,7 +1302,7 @@
       "metadata": {
         "id": "_KmSiks1RxF4"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1328,7 +1337,7 @@
       "metadata": {
         "id": "ftx0pJCDIIaC"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1391,7 +1400,7 @@
       "metadata": {
         "id": "j6Yl5XKgSX5Y"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1453,7 +1462,7 @@
         "outputId": "869a1eb8-cc66-4d42-fa17-4b8048fe779a",
         "collapsed": true
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1812,7 +1821,7 @@
         },
         "outputId": "dc529791-7e82-4be7-91d3-ec7313862e73"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1884,7 +1893,7 @@
         },
         "outputId": "56861a0b-6229-49e8-a170-f75e5a6df08a"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
