--- a/Pytorch_ML_zoomcamp_08_image_classification.ipynb
+++ b/Pytorch_ML_zoomcamp_08_image_classification.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -34,10 +34,48 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: keras_image_helper in /usr/local/lib/python3.12/dist-packages (0.0.2)\n",
-            "Requirement already satisfied: numpy>=2.3.2 in /usr/local/lib/python3.12/dist-packages (from keras_image_helper) (2.3.5)\n",
-            "Requirement already satisfied: pillow>=11.3.0 in /usr/local/lib/python3.12/dist-packages (from keras_image_helper) (11.3.0)\n",
-            "Wed Nov 26 22:15:35 2025       \n",
+            "Collecting keras_image_helper\n",
+            "  Downloading keras_image_helper-0.0.2-py3-none-any.whl.metadata (3.5 kB)\n",
+            "Collecting numpy>=2.3.2 (from keras_image_helper)\n",
+            "  Downloading numpy-2.3.5-cp312-cp312-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl.metadata (62 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.1/62.1 kB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: pillow>=11.3.0 in /usr/local/lib/python3.12/dist-packages (from keras_image_helper) (11.3.0)\n",
+            "Downloading keras_image_helper-0.0.2-py3-none-any.whl (5.4 kB)\n",
+            "Downloading numpy-2.3.5-cp312-cp312-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl (16.6 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.6/16.6 MB\u001b[0m \u001b[31m83.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m00:01\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: numpy, keras_image_helper\n",
+            "  Attempting uninstall: numpy\n",
+            "    Found existing installation: numpy 2.0.2\n",
+            "    Uninstalling numpy-2.0.2:\n",
+            "      Successfully uninstalled numpy-2.0.2\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "opencv-python-headless 4.12.0.88 requires numpy<2.3.0,>=2; python_version >= \"3.9\", but you have numpy 2.3.5 which is incompatible.\n",
+            "numba 0.60.0 requires numpy<2.1,>=1.22, but you have numpy 2.3.5 which is incompatible.\n",
+            "opencv-contrib-python 4.12.0.88 requires numpy<2.3.0,>=2; python_version >= \"3.9\", but you have numpy 2.3.5 which is incompatible.\n",
+            "tensorflow 2.19.0 requires numpy<2.2.0,>=1.26.0, but you have numpy 2.3.5 which is incompatible.\n",
+            "opencv-python 4.12.0.88 requires numpy<2.3.0,>=2; python_version >= \"3.9\", but you have numpy 2.3.5 which is incompatible.\u001b[0m\u001b[31m\n",
+            "\u001b[0mSuccessfully installed keras_image_helper-0.0.2 numpy-2.3.5\n"
+          ]
+        },
+        {
+          "data": {
+            "application/vnd.colab-display-data+json": {
+              "id": "03c8cce0193d4509be3d33c0168f0bd4",
+              "pip_warning": {
+                "packages": [
+                  "numpy"
+                ]
+              }
+            }
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Thu Nov 27 19:43:20 2025       \n",
             "+-----------------------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
             "|-----------------------------------------+------------------------+----------------------+\n",
@@ -46,7 +84,7 @@
             "|                                         |                        |               MIG M. |\n",
             "|=========================================+========================+======================|\n",
             "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   57C    P0             27W /   70W |     194MiB /  15360MiB |      0%      Default |\n",
+            "| N/A   42C    P8             10W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
             "|                                         |                        |                  N/A |\n",
             "+-----------------------------------------+------------------------+----------------------+\n",
             "                                                                                         \n",
@@ -55,6 +93,7 @@
             "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
             "|        ID   ID                                                               Usage      |\n",
             "|=========================================================================================|\n",
+            "|  No running processes found                                                             |\n",
             "+-----------------------------------------------------------------------------------------+\n"
           ]
         }
@@ -67,6 +106,15 @@
         "\n",
         "!pip install keras_image_helper # run once\n",
         "!nvidia-smi # nvidia system information for T4 Tesla GPU"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# !pip list # to view all packages preinstalled in google colab environment"
       ]
     },
     {
@@ -1954,11 +2002,21 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.12"
     }
   },
   "nbformat": 4,
