--- a/Keras_ML_zoomcamp_08_image_classification.ipynb
+++ b/Keras_ML_zoomcamp_08_image_classification.ipynb
@@ -34,7 +34,14 @@
     "\n",
     "# to download the dataset run\n",
     "!git clone https://github.com/alexeygrigorev/clothing-dataset-small.git\n",
-    "# this will upload files to the colab environment, not to local machine"
+    "# this will upload files to the colab environment, not to local machine\n",
+    "\n",
+    "# Useful links:\n",
+    "\n",
+    "# Full dataset: https://www.kaggle.com/agrigorev/clothing-dataset-full\n",
+    "# Subset: https://github.com/alexeygrigorev/clothing-dataset-small\n",
+    "# Corresponding Medium article: https://medium.com/data-science-insider/clothing-dataset-5b72cd7c3f1f\n",
+    "# CS231n CNN for Visual Recognition: https://cs231n.github.io/\n"
    ]
   },
   {
@@ -45,8 +52,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bbe43693",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thu Nov 27 20:13:32 2025       \n",
+      "+-----------------------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
+      "|-----------------------------------------+------------------------+----------------------+\n",
+      "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                                         |                        |               MIG M. |\n",
+      "|=========================================+========================+======================|\n",
+      "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
+      "| N/A   36C    P8              9W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
+      "|                                         |                        |                  N/A |\n",
+      "+-----------------------------------------+------------------------+----------------------+\n",
+      "                                                                                         \n",
+      "+-----------------------------------------------------------------------------------------+\n",
+      "| Processes:                                                                              |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
+      "|        ID   ID                                                               Usage      |\n",
+      "|=========================================================================================|\n",
+      "|  No running processes found                                                             |\n",
+      "+-----------------------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi # nvidia system information for T4 Tesla GPU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16fe9c92",
    "metadata": {},
    "outputs": [],
    "source": []
