--- a/Keras_ML_zoomcamp_08_image_classification.ipynb
+++ b/Keras_ML_zoomcamp_08_image_classification.ipynb
@@ -11,6 +11,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bcd1de71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Hello World\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9c4f3c8c",
    "metadata": {},
    "outputs": [
@@ -93,7 +103,29 @@
    "id": "16fe9c92",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# On colab everything should be preinstalled, on local machine you need to install tensorflow\n",
+    "# !pip install tensorflow\n",
+    "\n",
+    "from tensorflow.keras.processing.image import load_img\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    " \n",
+    "%matplotlib inline\n",
+    " \n",
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "\n",
+    "# If the import is not working, try using\n",
+    "# from tensorflow.keras.utils import load_img\n",
+    "\n",
+    "# we can play with load_ing like so:\n",
+    "path = './clothing-dataset-small/train/t-shirt'\n",
+    "name = '5f0a3fa0-6a3d-4b68-b213-72766a643de7.jpg'\n",
+    "fullname = f'{path}/{name}'\n",
+    "load_img(fullname)"
+   ]
   }
  ],
  "metadata": {
@@ -101,18 +133,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.12"
   }
  },
  "nbformat": 4,
