feat: Add code for model inference, preprocessing, and decoding predictions.

--- a/Keras_ML_zoomcamp_08_image_classification.ipynb
+++ b/Keras_ML_zoomcamp_08_image_classification.ipynb
@@ -251,6 +251,133 @@
    "execution_count": null,
    "id": "c9eacfae",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 299, 299, 3)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Now we want to use this model to classify the image, we used before. \n",
+    "# But this time the model.predict function expects a bunch of images. \n",
+    "# So let’s create an array with possibly multiple images. In this case it is just one.\n",
+    "\n",
+    "X = np.array([x])\n",
+    "X.shape\n",
+    " \n",
+    "# Output: (1, 299, 299, 3)\n",
+    "# Eariier we did this: x = np.array(img) and image was resized to (299, 299, 3) already\n",
+    "\n",
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e3d2c9f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To do the prediction, we need some preprocessing before. This model expects \n",
+    "# inputs in a certain way using the preprocess_input function.\n",
+    "\n",
+    "X = preprocess_input(X) # we import preprocess_input from keras utils earlier\n",
+    "# X[0] # prints our image as 3 channels data for RGB - pixel values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7a46b373",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 256ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1, 1000)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# if we simply run model.predict(X) like so:\n",
+    "# model.predict(X)\n",
+    "\n",
+    "# prints array([[8.63965077e-04, 7.74647691e-04, 4.90004430e-04, 1.16718875e-03, ...\n",
+    "# so we will get predictions of all image classes the model is trained on\n",
+    "\n",
+    "pred = model.predict(X)\n",
+    "pred.shape\n",
+    " \n",
+    "# prints (1, 1000)\n",
+    "# This 1000 means that there are 1000 different classes and 1 means there is one image.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5949c1f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/download.tensorflow.org/data/imagenet_class_index.json\n",
+      "\u001b[1m35363/35363\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[('n02667093', 'abaya', np.float32(0.028695405)),\n",
+       "  ('n04418357', 'theater_curtain', np.float32(0.020717245)),\n",
+       "  ('n01930112', 'nematode', np.float32(0.015742596)),\n",
+       "  ('n03691459', 'loudspeaker', np.float32(0.013960059)),\n",
+       "  ('n03196217', 'digital_clock', np.float32(0.012880155))]]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Each value  in the printout is the probability that this image belongs to some class. \n",
+    "# To be able to make sense from this output, we need to know what are the classes. \n",
+    "# Therefor we need another function called decode_predictions to make the prediction human readable.\n",
+    "# from tensorflow.keras.applications.xception import decode_predictions\n",
+    "\n",
+    "decode_predictions(pred)\n",
+    "\n",
+    "# predictions are far from t-shirt downloaded but Xception model is not that good out\n",
+    "# of the box for fashion predictions - thus we need to use a transfer learning\n",
+    "# to improve our CNN - pre-trained convolutional neural network ...\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4aff347",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
