docs: Update pre-trained model heading, add new section on CNNs and transfer learning, and clarify preprocessing comments.

--- a/Keras_ML_zoomcamp_08_image_classification.ipynb
+++ b/Keras_ML_zoomcamp_08_image_classification.ipynb
@@ -206,7 +206,7 @@
    "id": "db639981",
    "metadata": {},
    "source": [
-    "## Load a pre-trained model"
+    "## Load a pre-trained model named Xception"
    ]
   },
   {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e3d2c9f6",
    "metadata": {},
    "outputs": [],
@@ -288,12 +288,14 @@
     "# inputs in a certain way using the preprocess_input function.\n",
     "\n",
     "X = preprocess_input(X) # we import preprocess_input from keras utils earlier\n",
-    "# X[0] # prints our image as 3 channels data for RGB - pixel values\n"
+    "# X[0] # prints our image as 3 channels data for RGB - pixel values\n",
+    "# but preprocessed - from -1 to 1 - similar way as when model was trained\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "7a46b373",
    "metadata": {},
    "outputs": [
@@ -327,7 +329,6 @@
     " \n",
     "# prints (1, 1000)\n",
     "# This 1000 means that there are 1000 different classes and 1 means there is one image.\n",
-    "\n",
     "\n"
    ]
   },
@@ -371,6 +372,14 @@
     "# predictions are far from t-shirt downloaded but Xception model is not that good out\n",
     "# of the box for fashion predictions - thus we need to use a transfer learning\n",
     "# to improve our CNN - pre-trained convolutional neural network ...\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7944ce0",
+   "metadata": {},
+   "source": [
+    "## Convolutional neural networks (CNN) and transfer learning "
    ]
   },
   {
