Model trained with lr 0.001 and checkpoints saved

--- a/Keras_ML_zoomcamp_08_image_classification.ipynb
+++ b/Keras_ML_zoomcamp_08_image_classification.ipynb
@@ -957,12 +957,12 @@
         "# val accuracy peak is on our 4th epoch while train is growing:"
       ],
       "metadata": {
-        "id": "j8FLpnbM64ID",
-        "outputId": "146346a7-51d3-46c0-f7df-1acdbb35c78f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 447
-        }
+        },
+        "id": "j8FLpnbM64ID",
+        "outputId": "146346a7-51d3-46c0-f7df-1acdbb35c78f"
       },
       "id": "j8FLpnbM64ID",
       "execution_count": 27,
@@ -1067,28 +1067,28 @@
         "\n",
         "from tqdm.auto import tqdm\n",
         "\n",
-        "# List of learning rates\n",
-        "lrs = [0.0001, 0.001, 0.01, 0.1]\n",
+        "# # List of learning rates\n",
+        "# lrs = [0.0001, 0.001, 0.01, 0.1]\n",
         "\n",
-        "for lr in tqdm(lrs):\n",
-        "    print(lr)\n",
+        "# for lr in tqdm(lrs):\n",
+        "#     print(lr)\n",
         "\n",
-        "    model = make_model(learning_rate=lr)\n",
-        "    history = model.fit(train_ds, epochs=10, validation_data=val_ds)\n",
-        "    scores[lr] = history.history\n",
+        "#     model = make_model(learning_rate=lr)\n",
+        "#     history = model.fit(train_ds, epochs=10, validation_data=val_ds)\n",
+        "#     scores[lr] = history.history\n",
         "\n",
-        "    print()\n",
-        "    print()\n",
+        "#     print()\n",
+        "#     print()\n",
         "\n",
-        "scores"
+        "# scores # I comment it out to save time for future..."
       ],
       "metadata": {
         "collapsed": true,
-        "id": "5It52JzUI9zL",
-        "outputId": "e672b219-b53e-47e5-87fb-4ac09635b0a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5It52JzUI9zL",
+        "outputId": "e672b219-b53e-47e5-87fb-4ac09635b0a9"
       },
       "id": "5It52JzUI9zL",
       "execution_count": 30,
@@ -1397,22 +1397,211 @@
         "\n",
         "# save_best_only: only save when the model is considered the best according to the metric provided in monitor\n",
         "\n",
-        "# mode: overwrite the save file based on either maximum or the minimum scores according the metric provided in monitor"
+        "# mode: overwrite the save file based on either maximum or the minimum scores according the metric provided in monitor\n",
+        "\n",
+        "# Saving the best model only\n",
+        "# How can we do this? After each epoch we trained we can evaluate the performance of the model on validation dataset. This we do for every epoch, then we look at the numbers and can invoke a callback. With this callback we can do anything we want. The evaluation on validation data is kind of callback. The history with all information is also kind of such a callback. This is just something we invoke after each epoch finishes\n",
+        "\n",
+        "# Training a model with callbacks\n",
+        "\n",
+        "model.save_weights('model_v1.weights.h5')\n",
+        "\n",
+        "# Keras uses this template for saving files.\n",
+        "'xception_v1_{epoch:02d}_{val_accuracy:.3f}.h5'.format(epoch=3, val_accuracy=0.84)\n",
+        "\n",
+        "# Output: 'xception_v1_03_0.840.h5'"
       ],
       "metadata": {
-        "id": "8K6S1gJMQmJJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "8K6S1gJMQmJJ",
+        "outputId": "66eb68c1-bd76-47c0-c1ff-81ce32d37be7"
       },
       "id": "8K6S1gJMQmJJ",
-      "execution_count": 31,
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'xception_v1_03_0.840.h5'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# save_best_only=True to save only when it’s an improvement regarding the last best result. mode='max' because we want to have a maximized accuracy, if we would use a loss value we should take mode='min'.\n",
+        "\n",
+        "checkpoint = keras.callbacks.ModelCheckpoint(\n",
+        "    'xception_v1_{epoch:02d}_{val_accuracy:.3f}.h5',\n",
+        "    save_best_only=True,\n",
+        "    monitor='val_accuracy',\n",
+        "    mode='max'\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "8i2YiJxzQ3TH"
+      },
+      "id": "8i2YiJxzQ3TH",
+      "execution_count": 35,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Now we can use this defined callback and retrain the best model using this callback.\n",
+        "\n",
+        "learning_rate = 0.001\n",
+        "\n",
+        "model = make_model(learning_rate=learning_rate)\n",
+        "\n",
+        "history = model.fit(\n",
+        "    train_ds,\n",
+        "    epochs=10,\n",
+        "    validation_data=val_ds,\n",
+        "    callbacks=[checkpoint]\n",
+        ")\n",
+        ""
+      ],
+      "metadata": {
+        "id": "MRFeHUFGTfjd",
+        "outputId": "7acfe46f-c356-47cc-b40a-3c4854eaf79b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "MRFeHUFGTfjd",
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 107ms/step - accuracy: 0.4898 - loss: 1.4824"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m28s\u001b[0m 208ms/step - accuracy: 0.4911 - loss: 1.4786 - val_accuracy: 0.7683 - val_loss: 0.7257\n",
+            "Epoch 2/10\n",
+            "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 65ms/step - accuracy: 0.7815 - loss: 0.6436"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 76ms/step - accuracy: 0.7814 - loss: 0.6435 - val_accuracy: 0.7977 - val_loss: 0.6494\n",
+            "Epoch 3/10\n",
+            "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 70ms/step - accuracy: 0.8222 - loss: 0.5082"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 81ms/step - accuracy: 0.8222 - loss: 0.5083 - val_accuracy: 0.8065 - val_loss: 0.5948\n",
+            "Epoch 4/10\n",
+            "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 73ms/step - accuracy: 0.8676 - loss: 0.4280 - val_accuracy: 0.8065 - val_loss: 0.5808\n",
+            "Epoch 5/10\n",
+            "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 63ms/step - accuracy: 0.8840 - loss: 0.3773"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 74ms/step - accuracy: 0.8840 - loss: 0.3772 - val_accuracy: 0.8123 - val_loss: 0.5776\n",
+            "Epoch 6/10\n",
+            "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 71ms/step - accuracy: 0.9055 - loss: 0.3339"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 82ms/step - accuracy: 0.9054 - loss: 0.3339 - val_accuracy: 0.8152 - val_loss: 0.5428\n",
+            "Epoch 7/10\n",
+            "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 81ms/step - accuracy: 0.9245 - loss: 0.2835 - val_accuracy: 0.8065 - val_loss: 0.5584\n",
+            "Epoch 8/10\n",
+            "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 73ms/step - accuracy: 0.9343 - loss: 0.2545 - val_accuracy: 0.8065 - val_loss: 0.5447\n",
+            "Epoch 9/10\n",
+            "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 72ms/step - accuracy: 0.9505 - loss: 0.2206"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 83ms/step - accuracy: 0.9504 - loss: 0.2208 - val_accuracy: 0.8240 - val_loss: 0.5519\n",
+            "Epoch 10/10\n",
+            "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 74ms/step - accuracy: 0.9486 - loss: 0.2215 - val_accuracy: 0.8211 - val_loss: 0.5429\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "8i2YiJxzQ3TH"
+        "id": "26qVqP3FT7hW"
       },
-      "id": "8i2YiJxzQ3TH",
+      "id": "26qVqP3FT7hW",
       "execution_count": null,
       "outputs": []
     }
