Recommit after adding layers

--- a/Keras_ML_zoomcamp_08_image_classification.ipynb
+++ b/Keras_ML_zoomcamp_08_image_classification.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/denis911/image-classification-transfer-learning-pytorch-keras-comparison/blob/main/Keras_ML_zoomcamp_08_image_classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "dcc5729c",
       "metadata": {
         "id": "dcc5729c"
@@ -833,6 +843,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "rufyOu8i2oCX",
         "outputId": "62467b36-8749-4c51-803d-ca761512fb6d"
       },
@@ -1421,8 +1432,6 @@
         "# softmax"
       ],
       "metadata": {
-        "id": "ehgDzjcbCj63",
-        "outputId": "72760ea4-6526-4cb9-857a-e82f388a49a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000,
@@ -1439,7 +1448,10 @@
             "0257fa7571b348f9b3484ce177ea2d07",
             "a070d2cd19f1458a8fa0b1fe3baba42d"
           ]
-        }
+        },
+        "collapsed": true,
+        "id": "ehgDzjcbCj63",
+        "outputId": "72760ea4-6526-4cb9-857a-e82f388a49a8"
       },
       "id": "ehgDzjcbCj63",
       "execution_count": 32,
@@ -1678,12 +1690,12 @@
         "plt.legend()"
       ],
       "metadata": {
-        "id": "0gpEje5ZD6mQ",
-        "outputId": "12c77b3a-ebfc-479d-b3e0-f35ed861cdcd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 447
-        }
+        },
+        "id": "0gpEje5ZD6mQ",
+        "outputId": "12c77b3a-ebfc-479d-b3e0-f35ed861cdcd"
       },
       "id": "0gpEje5ZD6mQ",
       "execution_count": 33,
@@ -1728,7 +1740,8 @@
     },
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "accelerator": "GPU",
     "widgets": {
