Closing for today

--- a/Keras_ML_zoomcamp_08_image_classification.ipynb
+++ b/Keras_ML_zoomcamp_08_image_classification.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/denis911/image-classification-transfer-learning-pytorch-keras-comparison/blob/main/Keras_ML_zoomcamp_08_image_classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "dcc5729c",
       "metadata": {
         "id": "dcc5729c"
@@ -1825,11 +1815,11 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "T7INFy5oSSts",
-        "outputId": "db13a680-82d1-4f8c-9686-33463258fc21",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "T7INFy5oSSts",
+        "outputId": "db13a680-82d1-4f8c-9686-33463258fc21"
       },
       "id": "T7INFy5oSSts",
       "execution_count": 34,
@@ -2162,12 +2152,12 @@
         "plt.legend()\n"
       ],
       "metadata": {
-        "id": "oowLKSyCazE5",
-        "outputId": "af2c917b-1de4-4fce-d41e-34320338ead6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 452
-        }
+        },
+        "id": "oowLKSyCazE5",
+        "outputId": "af2c917b-1de4-4fce-d41e-34320338ead6"
       },
       "id": "oowLKSyCazE5",
       "execution_count": 35,
@@ -2211,12 +2201,12 @@
         "# I saved 85% model to my laptop - just in case...\n"
       ],
       "metadata": {
-        "id": "DbSLoeqkcOI_",
-        "outputId": "020b9205-597b-4a7f-f45b-34c800be64c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 447
-        }
+        },
+        "id": "DbSLoeqkcOI_",
+        "outputId": "020b9205-597b-4a7f-f45b-34c800be64c3"
       },
       "id": "DbSLoeqkcOI_",
       "execution_count": 37,
@@ -2261,8 +2251,7 @@
     },
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "accelerator": "GPU"
   },
