--- a/HW8_hair_type_classification_keras.ipynb
+++ b/HW8_hair_type_classification_keras.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPElyMruR7/dScursjc5Q/+",
+      "authorship_tag": "ABX9TyMWH2xxJt75yEAn9vE+ktgD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
         "# We'll build a model for classifying various hair types. For this, we will use the Hair Type dataset that was obtained from Kaggle and slightly rebuilt.\n",
         "\n",
         "# RUN ONCE:\n",
-        "!wget https://github.com/SVizor42/ML_Zoomcamp/releases/download/straight-curly-data/data.zip;"
+        "!wget https://github.com/SVizor42/ML_Zoomcamp/releases/download/straight-curly-data/data.zip > /dev/null"
       ],
       "metadata": {
         "colab": {
@@ -117,11 +117,150 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Reproducibility\n",
+        "# Reproducibility in deep learning is a multifaceted challenge that requires attention to both software and hardware details. In some cases, we can't guarantee exactly the same results during the same experiment runs.\n",
+        "\n",
+        "# Therefore we suggest to set the random number seed generators by:\n",
+        "\n",
+        "import numpy as np\n",
+        "import torch\n",
+        "\n",
+        "SEED = 42\n",
+        "np.random.seed(SEED)\n",
+        "torch.manual_seed(SEED)\n",
+        "\n",
+        "if torch.cuda.is_available():\n",
+        "    torch.cuda.manual_seed(SEED)\n",
+        "    torch.cuda.manual_seed_all(SEED)\n",
+        "\n",
+        "torch.backends.cudnn.deterministic = True\n",
+        "torch.backends.cudnn.benchmark = False\n",
+        "\n"
+      ],
       "metadata": {
         "id": "Ck5t44AEjzlk"
       },
-      "execution_count": 3,
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Model"
+      ],
+      "metadata": {
+        "id": "fuWrLrmcqmxx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Model to classify curly vs straight hair from the photo\n",
+        "# We will use Convolutional Neural Network (CNN) and PyTorch.\n",
+        "\n",
+        "# TASK - develop the model with following structure:\n",
+        "\n",
+        "# The shape for input should be (3, 200, 200) (channels first format in PyTorch)\n",
+        "# Next, create a convolutional layer (nn.Conv2d):\n",
+        "# Use 32 filters (output channels)\n",
+        "# Kernel size should be (3, 3) (that's the size of the filter), padding = 0, stride = 1\n",
+        "# Use 'relu' as activation\n",
+        "# Reduce the size of the feature map with max pooling (nn.MaxPool2d)\n",
+        "# Set the pooling size to (2, 2)\n",
+        "# Turn the multi-dimensional result into vectors using flatten or view\n",
+        "# Next, add a nn.Linear layer with 64 neurons and 'relu' activation\n",
+        "# Finally, create the nn.Linear layer with 1 neuron - this will be the output\n",
+        "# The output layer should have an activation - use the appropriate activation for the binary classification case - SIGMOID\n",
+        "\n",
+        "# As optimizer use torch.optim.SGD with the following parameters:\n",
+        "\n",
+        "# torch.optim.SGD(model.parameters(), lr=0.002, momentum=0.8)\n",
+        "\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "\n",
+        "class HairClassifier(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super().__init__()\n",
+        "        self.conv1 = nn.Conv2d(3, 32, 3)\n",
+        "        self.pool = nn.MaxPool2d(2, 2)\n",
+        "        self.fc1 = nn.Linear(32 * 99 * 99, 64)\n",
+        "        self.fc2 = nn.Linear(64, 1)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        x = F.relu(self.conv1(x))\n",
+        "        x = self.pool(x)\n",
+        "        x = x.view(x.size(0), -1)\n",
+        "        x = F.relu(self.fc1(x))\n",
+        "        x = self.fc2(x)     # <-- raw logits, no sigmoid\n",
+        "        # our loss will be in the training nn.BCEWithLogitsLoss()\n",
+        "\n",
+        "        return x\n",
+        "\n",
+        "\n",
+        "# Q1 - we use loss  nn.BCEWithLogitsLoss()\n"
+      ],
+      "metadata": {
+        "id": "Uar0DSMRqUdS"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Q2 = Total params: 20,073,473\n",
+        "# What's the total number of parameters of the model?\n",
+        "# In PyTorch, you can find the total number of parameters using:\n",
+        "\n",
+        "# Option 1: Using torchsummary (install with: pip install torchsummary)\n",
+        "from torchsummary import summary\n",
+        "model = HairClassifier()\n",
+        "summary(model, (3, 200, 200))"
+      ],
+      "metadata": {
+        "id": "GBNZRO3Gv_LO",
+        "outputId": "64b947bc-9659-40dc-f187-45257a854c9b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "----------------------------------------------------------------\n",
+            "        Layer (type)               Output Shape         Param #\n",
+            "================================================================\n",
+            "            Conv2d-1         [-1, 32, 198, 198]             896\n",
+            "         MaxPool2d-2           [-1, 32, 99, 99]               0\n",
+            "            Linear-3                   [-1, 64]      20,072,512\n",
+            "            Linear-4                    [-1, 1]              65\n",
+            "================================================================\n",
+            "Total params: 20,073,473\n",
+            "Trainable params: 20,073,473\n",
+            "Non-trainable params: 0\n",
+            "----------------------------------------------------------------\n",
+            "Input size (MB): 0.46\n",
+            "Forward/backward pass size (MB): 11.96\n",
+            "Params size (MB): 76.57\n",
+            "Estimated Total Size (MB): 89.00\n",
+            "----------------------------------------------------------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "LAbvaHyOxCnR"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
