--- a/HW8_hair_type_classification_keras.ipynb
+++ b/HW8_hair_type_classification_keras.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMWH2xxJt75yEAn9vE+ktgD",
+      "authorship_tag": "ABX9TyOTS5lISMywMbhAfjq547aX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -184,10 +184,23 @@
         "class HairClassifier(nn.Module):\n",
         "    def __init__(self):\n",
         "        super().__init__()\n",
-        "        self.conv1 = nn.Conv2d(3, 32, 3)\n",
-        "        self.pool = nn.MaxPool2d(2, 2)\n",
+        "        # Input: (3, 200, 200)\n",
+        "\n",
+        "        self.conv1 = nn.Conv2d(\n",
+        "            in_channels=3,\n",
+        "            out_channels=32,\n",
+        "            kernel_size=3,\n",
+        "            stride=1,\n",
+        "            padding=0\n",
+        "        )\n",
+        "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2)\n",
+        "\n",
+        "        # After conv1: (32, 198, 198)\n",
+        "        # After pool: (32, 99, 99)\n",
+        "\n",
         "        self.fc1 = nn.Linear(32 * 99 * 99, 64)\n",
         "        self.fc2 = nn.Linear(64, 1)\n",
+        "\n",
         "\n",
         "    def forward(self, x):\n",
         "        x = F.relu(self.conv1(x))\n",
@@ -205,7 +218,7 @@
       "metadata": {
         "id": "Uar0DSMRqUdS"
       },
-      "execution_count": 7,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -221,13 +234,13 @@
         "summary(model, (3, 200, 200))"
       ],
       "metadata": {
-        "id": "GBNZRO3Gv_LO",
-        "outputId": "64b947bc-9659-40dc-f187-45257a854c9b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GBNZRO3Gv_LO",
+        "outputId": "44bdd7cc-3b0e-4a6f-9474-5f91d569c063"
       },
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
